--- a/views/index.ejs
+++ b/views/index.ejs
@@ -277,7 +277,7 @@
                         <p class="reading12"><i class="fa fa-check text-primary me-3 "></i>Tailored Support</p>
                         <p class="reading12"><i class="fa fa-check text-primary me-3 "></i>Enlightened Employers</p>
                         <p class="reading12"><i class="fa fa-check text-primary me-3 "></i>Advocacy</p>
-                        <a class="btn btn-primary py-3 px-5 mt-3 reading12 " href="/about">Read More</a>
+                        <a class="btn btn-primary py-3 px-5 mt-3 reading12 linkss " href="/about">Read More</a>
                     </div>
                     
                     <!-- <div class="popup" id="videoPopup">
@@ -312,17 +312,17 @@
                 <div class="tab-class text-center wow fadeInUp" data-wow-delay="0.3s">
                     <ul class="nav nav-pills d-inline-flex justify-content-center border-bottom mb-5" id="myTabs">
                         <li class="nav-item">
-                            <a class="d-flex align-items-center text-start mx-3 ms-0 pb-3 navlink active" data-bs-toggle="pill" href="#tab-1" >
+                            <a class="d-flex align-items-center text-start mx-3 ms-0 pb-3 navlink active linkss" data-bs-toggle="pill" href="#tab-1" >
                                 <h6 class="mt-n1 mb-0 reading12">Featured</h6>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="d-flex align-items-center text-start mx-3 pb-3 navlink" data-bs-toggle="pill" href="#tab-2">
+                            <a class="d-flex align-items-center text-start mx-3 pb-3 navlink linkss" data-bs-toggle="pill" href="#tab-2">
                                 <h6 class="mt-n1 mb-0 reading12">Onsite</h6>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="d-flex align-items-center text-start mx-3 me-0 pb-3 navlink" data-bs-toggle="pill" href="#tab-3">
+                            <a class="d-flex align-items-center text-start mx-3 me-0 pb-3 navlink linkss" data-bs-toggle="pill" href="#tab-3">
                                 <h6 class="mt-n1 mb-0 reading12">Offsite</h6>
                             </a>
                         </li>
@@ -347,7 +347,7 @@
                                     </div>
                                     <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-center">
                                         <div class="d-flex mb-3">
-                                            <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a>
+                                            <a class="btn btn-light btn-square me-3 linkss" href=""><i class="far fa-heart text-primary"></i></a>
                                             <button class="btn btn-primary view-button reading12" data-jobid="<%=job._id%>">View Details</button>
                                         </div>
                                         <small class="text-truncate reading12"><i class="far fa-calendar-alt text-primary me-2 reading12"></i>Date Line: 01 Jan, 2045</small>
