--- a/views/reg.ejs
+++ b/views/reg.ejs
@@ -29,7 +29,7 @@
     <div class="margins12">
         <!-- Spinner Start -->
         <!-- Navbar Start -->
-        <%-include("partials/nav.ejs")%> 
+        <%- include('partials/nav.ejs', { notificationMessages: notificationMessages }) %>
         <!-- Navbar End -->
         <div class="background1"></div>
             <div class="forms">
