--- a/views/uploadResume.ejs
+++ b/views/uploadResume.ejs
@@ -44,7 +44,7 @@
 
 
         <!-- Navbar Start -->
-        <%-include("partials/nav.ejs")%> 
+        <%- include('partials/nav.ejs', { notificationMessages: notificationMessages }) %>
         <!-- Navbar End -->
         
         <!-- Header Start -->
