--- a/views/applied-for.ejs
+++ b/views/applied-for.ejs
@@ -57,7 +57,7 @@
             </div>
         </div>
         <div class="main-container">
-            <% getjobs.forEach(job => { %>
+            <% getjobs.forEach(job => { %>                  
                 <div class="job-item p-4 mb-4">
                     <div class="row g-4">
                         <div class="col-sm-12 col-md-8 d-flex align-items-center">
@@ -70,6 +70,21 @@
                             </div>
                         </div>
                         <div class="col-sm-12 col-md-4 d-flex flex-column align-items-start align-items-md-end justify-content-between">
+                            <div class="check-container">
+                                <div class="cntr">
+                                    <div class="check-container">
+                                        <span>CV Acceptance</span>
+                                        <input checked="" type="checkbox" id="cbx<%= job._id %>" class="hidden-xs-up cv"  disabled>
+                                        <label for="cbx<%= job._id %>" class="cbx"></label>
+                                    </div>
+                                  </div>
+                                  <span>Job Acceptance</span>
+                                  <div class="cntr">
+                                    <input checked="" type="checkbox" id="cbx1<%= job._id %>" class="hidden-xs-up overall" disabled>
+                                    <label for="cbx1<%= job._id %>" class="cbx"></label>
+                                  </div>
+                            </div> 
+                          
                             <div class="d-flex">
                                 <a class="btn btn-light btn-square me-3" href=""><i class="far fa-heart text-primary"></i></a>
                                 <a class="btn btn-primary disabled-button" href="#">Applied</a>
@@ -95,12 +110,66 @@
 </div>
 
        <!-- JavaScript Libraries -->
-       <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
        <script src="/lib/wow/wow.min.js"></script>
        <script src="/lib/easing/easing.min.js"></script>
        <script src="/lib/waypoints/waypoints.min.js"></script>
-       <script src="/lib/owlcarousel/owl.carousel.min.js"></script>
+       <script src="/lib/owlcarousel/owl.carousel.min.js"></script> 
+       <script>
+const elements = document.querySelectorAll(".cv");
+const elements2 = document.querySelectorAll(".overall");
+const id=[];
+const id2=[];
+elements.forEach((element) => {
+  id.push(element.id.slice(3));
+  const checkbox = document.getElementById(element.id);
+
+// Uncheck the checkbox
+if (checkbox) {
+  checkbox.checked = false;
+}
+});
+elements2.forEach((element2) => {
+  id2.push(element2.id.slice(4));
+  const checkbox2 = document.getElementById(element2.id);
+
+// Uncheck the checkbox
+if (checkbox2) {
+  checkbox2.checked = false;
+}
+});
+$.ajax({
+    url: '/appliedfor/status',
+    type: 'POST',
+    contentType: 'application/json',
+    data: JSON.stringify({ ids: id,ids2:id2 }),
+    success: function(data) {
+        const commonElements = data.commonElements;
+        const commonJob = data.commonJob;
+if (commonElements && commonElements.length > 0) {
+  const modifiedCommonElements = commonElements.map(element => 'cbx' + element);
+  console.log('Modified Common Elements:', modifiedCommonElements);
+  const checkbox1 = document.getElementById(modifiedCommonElements);
+  if (checkbox1) {
+  checkbox1.checked = true;
+}
+}
+if (commonJob && commonJob.length > 0) {
+  const modifiedCommonElements2 = commonJob.map(element => 'cbx1' + element);
+  console.log('Modified Common Elements2:', modifiedCommonElements2);
+  const checkbox2 = document.getElementById(modifiedCommonElements2);
+  if (checkbox2) {
+  checkbox2.checked = true;
+}
+}
+    },
+    error: function(error) {
+      console.error('Error:', error);
+    }
+  });
+
+       </script>
        <script src="../js/applied-for.js"></script>
 </body>
 </html>
