--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,7 +56,7 @@
 
 
         <!-- Navbar Start -->
-        <%-include("partials/nav.ejs")%> 
+        <%- include('partials/nav.ejs', { notificationMessages: notificationMessages }) %>
         <!-- Navbar End -->
 
 
