--- a/views/job-detail.ejs
+++ b/views/job-detail.ejs
@@ -43,7 +43,7 @@
 
 
         <!-- Navbar Start -->
-        <%-include("partials/nav.ejs")%> 
+        <%- include('partials/nav.ejs', { notificationMessages: notificationMessages }) %>
         <!-- Navbar End -->
 
 
