--- a/views/job-detail.ejs
+++ b/views/job-detail.ejs
@@ -72,7 +72,7 @@
                 <div class="row gy-5 gx-4">
                     <div class="col-lg-8">
                         <div class="d-flex align-items-center mb-5">
-                            <img class="flex-shrink-0 img-fluid border rounded" src="/img/<%=jobDetails.Company%>.jpg" alt="" style="width: 80px; height: 80px;">
+                            <img class="flex-shrink-0 img-fluid border rounded" src="../img/<%=jobDetails.Companylogo%>" alt="" style="width: 80px; height: 80px;">
                             <div class="text-start ps-4">
 
                                   <!-------->
