--- a/views/about.ejs
+++ b/views/about.ejs
@@ -45,8 +45,8 @@
 
 
         <!-- Navbar Start -->
-        <%-include("partials/nav.ejs")%> 
-        <!-- Navbar End -->
+        <%- include('partials/nav.ejs', { notificationMessages: notificationMessages }) %>      
+          <!-- Navbar End -->
 
 
         <!-- Header End -->
