--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,6 +49,10 @@
         #job-mask{
             width:700px;
         }
+        .footer{
+            margin-bottom:-9%;
+            width:150%;
+        }
     </style>
 </head>
 
