--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -37,7 +37,7 @@
     <div class="profile-container">
       <div class="profile-header">
         <div class="avatar">
-          <img src="" alt="User Avatar" />
+          <img src="/img/user.jpg" alt="User Avatar" style="object-fit: contain;margin-top:0px;"/>
         </div>
           <h1><%= getprofile.Firstname %></h1>
           <p>Cairo, Egypt</p>
